--- a/package.json
+++ b/package.json
@@ -10,17 +10,12 @@
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
+    "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@fullhuman/postcss-purgecss": "^2.1.0",
-    "babel-loader": "^8.0.6",
-    "postcss-loader": "^3.0.0",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "@fullhuman/postcss-purgecss": "^2.1.0"
   }
 }
