--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-remark-shiki": "^0.3.1",
+    "gridsome-plugin-remark-twitter": "^0.2.1",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
