--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
+    "@noxify/gridsome-plugin-remark-embed": "^1.1.5",
     "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
     "gridsome-plugin-remark-shiki": "^0.3.1",
-    "gridsome-plugin-remark-twitter": "^0.2.1",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
