--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-google-analytics": "^0.1.0",
+    "@gridsome/plugin-sitemap": "^0.2.3",
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
@@ -14,6 +16,7 @@
     "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-feed": "^1.0.2",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "tailwindcss": "^1.2.0"
   },
