--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
-    "gridsome-plugin-feed": "^1.0.2",
     "gridsome-plugin-remark-shiki": "^0.3.1",
+    "gridsome-plugin-rss": "^1.2.0",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
