--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "d3": "^5.15.1",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-plausible": "0.0.1",
     "gridsome-plugin-rss": "^1.2.0",
     "tailwindcss": "^1.2.0"
   },
