Added a redirect to one of my posts.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
 [[redirects]]
   from = "/writings/joplin"
   to = "/joplin"
+
+[[redirects]]
+  from = "writings/dealing-with-mild-depression"
+  to = "/dealing-with-mild-depression"
