--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-
+    "@gridsome/cli": "^0.3.2",
     "@gridsome/plugin-sitemap": "^0.2.3",
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
-    "@noxify/gridsome-plugin-remark-embed": "^1.1.5",
+    "@noxify/gridsome-plugin-remark-embed": "^1.2.1",
     "axios": "^0.19.2",
-    "d3": "^5.15.1",
-    "gridsome": "^0.7.0",
+    "d3": "^5.16.0",
+    "global": "^4.4.0",
+    "gridsome": "^0.7.14",
     "gridsome-plugin-plausible": "0.0.1",
     "gridsome-plugin-rss": "^1.2.0",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.0"
+    "@fullhuman/postcss-purgecss": "^2.2.0"
   }
 }
