--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.2.0",
     "@gridsome/cli": "^0.3.2",
     "@gridsome/plugin-sitemap": "^0.2.3",
     "@gridsome/remark-prismjs": "^0.3.0",
@@ -21,7 +22,5 @@
     "gridsome-plugin-rss": "^1.2.0",
     "tailwindcss": "^1.4.6"
   },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.2.0"
-  }
+  "devDependencies": {}
 }
