--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@gridsome/remark-prismjs": "^0.3.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
+    "@gridsome/vue-remark": "^0.2.1",
     "@noxify/gridsome-plugin-remark-embed": "^1.2.1",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
+    "d3-array": "^2.4.0",
+    "d3-format": "^1.4.4",
+    "d3-time": "^1.1.0",
     "global": "^4.4.0",
     "gridsome": "^0.7.14",
     "gridsome-plugin-plausible": "0.0.1",
