--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.5.0",
     "@gridsome/vue-remark": "^0.2.1",
+    "@microflash/gridsome-plugin-feed": "^1.0.7",
     "@noxify/gridsome-plugin-remark-embed": "^1.2.1",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
