--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@noxify/gridsome-plugin-remark-embed": "^1.2.1",
     "@tailwindcss/typography": "^0.2.0",
     "@zefman/gridsome-source-webmention": "^0.1.4",
+    "algoliasearch": "^4.4.0",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "d3-array": "^2.5.0",
@@ -28,7 +29,9 @@
     "gridsome-plugin-plausible": "0.0.1",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "gridsome-plugin-rss": "^1.2.0",
-    "tailwindcss": "^1.6.2"
+    "instantsearch.css": "^7.4.3",
+    "tailwindcss": "^1.6.2",
+    "vue-instantsearch": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
