added redirects for brain

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,16 +9,12 @@
   package = "netlify-plugin-gridsome-cache"
 
 [[redirects]]
-  from = "/writings/joplin"
-  to = "/joplin"
+  from = "/resource/*/*"
+  to = "/brain/*/*"
 
 [[redirects]]
-  from = "writings/dealing-with-mild-depression"
-  to = "/dealing-with-mild-depression"
-
-[[redirects]]
-  from = "writings/designing-first-site"
-  to = "/designing-first-site"
+  from = "/writings/*"
+  to = "/*"
 
 [[redirects]]
   from = "writings/dj-get-context"
