--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,10 @@
   package = "netlify-plugin-gridsome-cache"
 
 [[redirects]]
+  from = "/resource/*"
+  to = "/brain/:splat"
+
+[[redirects]]
   from = "/writings/joplin"
   to = "/joplin"
 
@@ -23,3 +27,4 @@
 [[redirects]]
   from = "writings/dj-get-context"
   to = "/django-get-context-data"
+
