--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.2.0",
     "@zefman/gridsome-source-webmention": "^0.1.4",
     "algoliasearch": "^4.4.0",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "d3-array": "^2.5.0",
@@ -31,7 +32,8 @@
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "gridsome-plugin-rss": "^1.2.0",
     "instantsearch.css": "^7.4.3",
-    "tailwindcss": "^1.6.2",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue-instantsearch": "^3.2.0"
   },
   "devDependencies": {
