--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^7.6.0",
     "eslint-plugin-gridsome": "^1.5.0",
     "gridsome-plugin-tailwindcss": "^3.0.1",
+    "netlify-plugin-algolia-export": "^1.0.2",
     "vue-eslint-parser": "^7.1.0"
   }
 }
