--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "global": "^4.4.0",
     "gridsome": "^0.7.19",
     "gridsome-plugin-plausible": "0.0.1",
+    "gridsome-plugin-remark-prismjs-all": "^0.3.5",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "gridsome-plugin-rss": "^1.2.0",
     "instantsearch.css": "^7.4.3",
