--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@tailwindcss/typography": "^0.3.1",
     "@zefman/gridsome-source-webmention": "^0.1.4",
     "algoliasearch": "^4.4.0",
-    "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "d3-array": "^2.5.0",
@@ -32,14 +31,16 @@
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "gridsome-plugin-rss": "^1.2.0",
     "instantsearch.css": "^7.4.3",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue-instantsearch": "^3.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "autoprefixer": "^9.8.6",
     "eslint": "^7.6.0",
     "eslint-plugin-gridsome": "^1.5.0",
     "gridsome-plugin-tailwindcss": "^3.0.1",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
     "vue-eslint-parser": "^7.1.0"
   }
 }
